# patchseq_autotrace

./: .bumpversion.cfg  .gitignore  README.md  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
patchseq_autotrace/: Jp2ToTif.py  database_tools.py  statics.py  utils.py
patchseq_autotrace/commands/: cleanup_fail.py  post_process_segmentation.py  pre_process_directory.py  run_database_sweep.py  run_pipeline_on_hpc.py  skeleton_stack_to_swc.py  validate_directory.py
patchseq_autotrace/processes/: postprocess.py  pre_process.py  stack_to_swc.py  validation.py
patchseq_autotrace/slurm_tools/: Slurm_DAG.py  slurm_tools.py
