[metadata]
name = patchseq_autotrace
version = attr: patchseq_autotrace.__version__

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    auto-pre-proc = patchseq_autotrace.commands.pre_process_directory:console_script
    auto-segmentation = patchseq_autotrace.commands.validate_directory:console_script
    auto-post-proc = patchseq_autotrace.commands.post_process_segmentation:console_script
    auto-skeleton-to-swc = patchseq_autotrace.commands.skeleton_stack_to_swc:console_script
    auto-patchseq-pipeline-hpc = patchseq_autotrace.commands.run_pipeline_on_hpc:console_script
    auto-cleanup = patchseq_autotrace.commands.cleanup_fail:console_script